turmites.lessons.turmites.turmitecreator.TurmiteCreator.scala.error
Turmite:64: error: ')' expected but ';' found.
  rule = Array( Array( Array(0, NOTURN, 1), Array(0, LEFT  , 1) ),Array( Array(1, RIGHT , 0), Array(0, NOTURN, 1 ) );
                                                                                                                    ^